--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ body {
   align-items: center;
 }
 
+.board-container {
+    min-width: var(--board-size);
+}
+
 #player {
   display: none;
 }
@@ -25,7 +29,7 @@ body {
   border: 3px solid black;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  display: grid;
+  display: none;
 }
 
 #board .cell {
